--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^1.0.0",
     "formidable": "^1.2.1",
     "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.0",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.16.3",
