Paste handling, additional request params, custom button content

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codex.editor.image",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "keywords": [
     "codex editor",
     "tool",
@@ -27,6 +27,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.0",
     "postcss-nested-ancestors": "^2.0.0",
+    "request": "^2.88.0",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.16.3",
