code style updates

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
+    "eslint": "^5.9.0",
+    "eslint-config-codex": "github:codex-team/eslint-config",
+    "eslint-loader": "^2.1.1",
     "formidable": "^1.2.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.0",
