--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "codex.editor.image",
+  "name": "@editorjs/image",
   "version": "2.0.2",
   "keywords": [
     "codex editor",
     "tool",
-    "image"
+    "image",
+    "editor.js",
+    "editorjs"
   ],
-  "description": "Image Tool for CodeX.Editor",
+  "description": "Image Tool for Editor.js",
   "license": "MIT",
-  "repository": "https://github.com/codex-editor/image",
+  "repository": "https://github.com/editorjs/image",
   "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack --config ./webpack.config.js --mode production --watch"
