--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "repository": "https://github.com/editorjs/image",
   "main": "./dist/bundle.js",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js --mode production",
-    "build:dev": "webpack --config ./webpack.config.js --mode development --watch"
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development --watch"
   },
   "author": {
     "name": "CodeX",
     "email": "team@ifmo.su"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.4",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-env": "^7.3.4",
     "@babel/runtime": "^7.2.0",
     "@codexteam/ajax": "^3.2.1",
     "babel-loader": "^8.0.5",
@@ -38,7 +38,7 @@
     "request": "^2.88.0",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   }
 }
