--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "description": "Image Tool for Editor.js",
   "license": "MIT",
-  "repository": "https://github.com/editorjs/image",
+  "repository": "https://github.com/editor-js/image",
   "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack --mode production",
