--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "codex.editor.image",
-  "version": "2.0.3",
+  "name": "@editorjs/image",
+  "version": "2.1.0",
   "keywords": [
     "codex editor",
     "tool",
-    "image"
+    "image",
+    "editor.js",
+    "editorjs"
   ],
-  "description": "Image Tool for CodeX.Editor",
+  "description": "Image Tool for Editor.js",
   "license": "MIT",
-  "repository": "https://github.com/codex-editor/image",
+  "repository": "https://github.com/editor-js/image",
   "main": "./dist/bundle.js",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js --mode production",
-    "build:dev": "webpack --config ./webpack.config.js --mode development --watch"
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development --watch"
   },
   "author": {
     "name": "CodeX",
     "email": "team@ifmo.su"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.4",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-env": "^7.3.4",
     "@babel/runtime": "^7.2.0",
     "@codexteam/ajax": "^3.2.1",
     "babel-loader": "^8.0.5",
@@ -36,7 +38,7 @@
     "request": "^2.88.0",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   }
 }
