--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     ["@babel/preset-env", {
-      "modules": "umd",
+      "modules": false,
       "useBuiltIns": "entry"
     }]
   ],
