--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,12 @@
   "presets": [
     ["@babel/preset-env", {
       "modules": false,
-      "useBuiltIns": "entry"
+      "corejs": 2,
+      "useBuiltIns": "entry",
     }]
   ],
   "plugins": [
+    "@babel/plugin-proposal-class-properties",
     "@babel/plugin-transform-runtime"
   ]
 }
