--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/runtime": "^7.2.0",
     "@codexteam/ajax": "^4.0.1",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "core-js": "^2.6.5",
     "css-loader": "^1.0.0",
     "eslint": "^5.9.0",
     "eslint-config-codex": "github:codex-team/eslint-config",
