include uploader again in bunlde, revert version, update readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@editorjs/image",
-  "version": "3.0.0",
+  "version": "2.3.0",
   "keywords": [
     "codex editor",
     "tool",
@@ -11,9 +11,9 @@
   "description": "Image Tool for Editor.js",
   "license": "MIT",
   "repository": "https://github.com/editor-js/image",
-  "main": "./dist/ImageTool.js",
+  "main": "./dist/bundle.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "rimraf ./dist && webpack --mode production",
     "build:dev": "webpack --mode development --watch"
   },
   "author": {
@@ -39,6 +39,7 @@
     "postcss-nested": "^4.1.0",
     "postcss-nested-ancestors": "^2.0.0",
     "request": "^2.88.0",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.29.5",
