Fix eslint-config, add github action, fix lint issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,8 @@
     "codex"
   ],
   "globals": {
-    "fetch": true
+    "fetch": true,
+    "ImageConfig": true,
+    "ImageToolData": true
   }
 }
