--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@editorjs/image",
-  "version": "2.6.0",
+  "version": "2.6.1",
   "keywords": [
     "codex editor",
     "tool",
@@ -42,6 +42,7 @@
     "style-loader": "^1.1.4",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "cropperjs": "^1.5.11"
   }
 }
