ADD:plugin resize-and-alignment

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "@codexteam/icons": "^0.0.6"
+    "@codexteam/icons": "^0.0.6",
+    "@editorjs/editorjs": "^2.26.4"
   }
 }
