--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@editorjs/image",
-  "version": "2.8.1",
+  "name": "@atomicmicrodev/image",
+  "version": "2.8.2",
   "keywords": [
     "codex editor",
     "tool",
