--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atomicmicrodev/image",
-  "version": "2.8.3",
+  "version": "2.8.4",
   "keywords": [
     "codex editor",
     "tool",
@@ -10,7 +10,7 @@
   ],
   "description": "Image Tool for Editor.js",
   "license": "MIT",
-  "repository": "https://github.com/personal-ai/editorjs-image-fork.git@custom-image-ui",
+  "repository": "https://github.com/personal-ai/editorjs-image-fork.git#custom-image-ui",
   "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack --mode production",
