change package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@atomicmicrodev/image",
-  "version": "2.8.12",
+  "name": "@personalai/editorjs-image",
+  "version": "2.8.13",
   "keywords": [
     "codex editor",
     "tool",
