--- a/package.json
+++ b/package.json
@@ -24,25 +24,16 @@
     "email": "team@ifmo.su"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/runtime": "^7.2.0",
     "@codexteam/ajax": "^4.2.0",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-codex": "^1.3.3",
     "eslint-loader": "^4.0.0",
     "formidable": "^1.2.1",
-    "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.0",
     "postcss-nested-ancestors": "^2.0.0",
     "request": "^2.88.0",
-    "style-loader": "^1.1.4",
-    "svg-inline-loader": "^0.8.0",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3"
+    "vite": "^4.5.0",
+    "vite-plugin-css-injected-by-js": "^3.3.0"
   },
   "dependencies": {
     "@codexteam/icons": "^0.0.6"
