--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "main": "./dist/image.umd.js",
   "module": "./dist/image.mjs",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/image.mjs",
@@ -24,9 +25,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint src/ --ext .js",
-    "lint:errors": "eslint src/ --ext .js --quiet",
-    "lint:fix": "eslint src/ --ext .js --fix"
+    "lint": "eslint src/ --ext .ts",
+    "lint:errors": "eslint src/ --ext .ts --quiet",
+    "lint:fix": "eslint src/ --ext .ts --fix"
   },
   "author": {
     "name": "CodeX",
@@ -34,17 +35,22 @@
   },
   "devDependencies": {
     "@codexteam/ajax": "^4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-codex": "^1.3.3",
-    "eslint-loader": "^4.0.0",
-    "formidable": "^1.2.1",
-    "postcss-nested": "^4.1.0",
-    "postcss-nested-ancestors": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^9.5.0",
+    "eslint-config-codex": "^2.0.1",
+    "eslint-loader": "^4.0.2",
+    "formidable": "^3.5.1",
+    "postcss-nested": "^6.0.1",
+    "postcss-nested-ancestors": "^3.0.0",
     "request": "^2.88.0",
-    "vite": "^4.5.0",
-    "vite-plugin-css-injected-by-js": "^3.3.0"
+    "typescript": "^5.4.5",
+    "vite": "^5.3.1",
+    "vite-plugin-css-injected-by-js": "^3.5.1",
+    "vite-plugin-dts": "^3.9.1"
   },
   "dependencies": {
-    "@codexteam/icons": "^0.0.6"
+    "@codexteam/icons": "^0.3.0",
+    "@editorjs/editorjs": "^2.29.1"
   }
 }
