refactor: few modification from last review

--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "vite-plugin-dts": "^3.9.1"
   },
   "dependencies": {
-    "@codexteam/icons": "^0.3.0",
-    "@eslint/eslintrc": "^3.1.0"
+    "@codexteam/icons": "^0.3.0"
   }
 }
