--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,11 @@
 {
-  "extends": [
-    "codex",
-    "plugin:@typescript-eslint/recommended"
-  ],
   "globals": {
-    "fetch": true,
-    "ImageConfig": true,
-    "ImageToolData": true
+    "HTMLOListElement": true,
+    "HTMLUListElement": true
   },
-  "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ]
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020
+  },
+  "parser": "@typescript-eslint/parser"
 }
