--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,6 +6,19 @@ on:
       - master
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 19
+          registry-url: https://registry.npmjs.org/
+      - run: yarn install
+      - run: yarn build
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
   publish-and-notify:
     uses: codex-team/github-workflows/.github/workflows/npm-publish-and-notify-reusable.yml@main
     secrets:
