update(reviewed): fix minor possible issues thanks to the reviews provided

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,5 @@
 {
-  "globals": {
-    "HTMLOListElement": true,
-    "HTMLUListElement": true
-  },
+  "globals": {},
   "parserOptions": {
     "sourceType": "module",
     "ecmaVersion": 2020
