--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,5 @@
       /* Type Checking */
       "strict": true,                                      /* Enable all strict type-checking options. */
     },
-    "include": ["src/*",
-                "src/types/**/*"]
+    "include": ["src/**/*.ts"]
   }
