--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@editorjs/image",
-  "version": "2.9.2",
+  "version": "2.9.3",
   "keywords": [
     "codex editor",
     "image",
@@ -47,12 +47,12 @@
     "postcss-nested-ancestors": "^3.0.0",
     "request": "^2.88.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.17.0",
     "vite": "^5.3.1",
     "vite-plugin-css-injected-by-js": "^3.5.1",
     "vite-plugin-dts": "^3.9.1"
   },
   "dependencies": {
-    "@codexteam/icons": "^0.3.0",
-    "typescript-eslint": "^7.16.1"
+    "@codexteam/icons": "^0.3.0"
   }
 }
