--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@editorjs/image",
+  "name": "replaceable-editor-js-image",
   "version": "2.9.3",
   "keywords": [
     "codex editor",
