--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@editorjs/image",
+  "name": "@yosipy/editorjs-image-for-github-rest-api",
   "version": "2.9.3",
   "keywords": [
     "codex editor",
