chore: enhance TypeScript configuration and build process
- Update tsconfig.json with stricter type checking and module resolution
- Modify package.json scripts to include type checking and declaration generation
- Update Vite configuration for better module and library bundling
- Improve type definitions and utility functions
- Add type-related scripts and configuration for better developer experience

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "scripts": {
     "dev": "concurrently \"vite\" \"node ./dev/server.js\"",
-    "build": "vite build",
-    "lint": "eslint",
-    "lint:errors": "eslint --quiet",
-    "lint:fix": "eslint --fix"
+    "build": "vite build && tsc --emitDeclarationOnly",
+    "lint": "eslint ./src --ext .ts",
+    "lint:errors": "eslint ./src --ext .ts --quiet",
+    "lint:fix": "eslint ./src --ext .ts --fix",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch"
   },
   "author": {
     "name": "CodeX",
