--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,31 @@
 {
-    "compilerOptions": {
-      /* Language and Environment */
-      "target": "es2017",                                     /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-      "lib": ["dom", "es2017"],
-      "jsx": "preserve",
-      /* Modules */
-      "module": "ESNext",
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "typeRoots": ["./node_modules/@types", "./types"],   /* Specify multiple folders that act like './node_modules/@types'. */
-      /* Interop Constraints */
-      "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-      "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-      "skipLibCheck": true,
-      /* Type Checking */
-      "strict": true,                                      /* Enable all strict type-checking options. */
-      "noImplicitAny": true,
-      "strictNullChecks": true,
-      "strictFunctionTypes": true,
-      "strictBindCallApply": true,
-      /* Emit */
-      "declaration": true,
-      "declarationDir": "./dist",
-      "outDir": "./dist",
-      "sourceMap": true,
-    },
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules", "dist"]
-  }
+  "compilerOptions": {
+    /* Language and Environment */
+    "target": "es2017" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "jsx": "preserve",
+    /* Modules */
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ] /* Specify multiple folders that act like './node_modules/@types'. */,
+    /* Interop Constraints */
+    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
+    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+    "skipLibCheck": true,
+    /* Type Checking */
+    "strict": true /* Enable all strict type-checking options. */,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    /* Emit */
+    "declaration": true,
+    "declarationDir": "./dist",
+    "outDir": "./dist",
+    "sourceMap": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
+}
